--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 		<profile>
 			<id>toolchain</id>
 			<activation>
-				<jdk>(,11)</jdk>
+				<jdk>(,9)</jdk>
 			</activation>
 			<build>
 				<plugins>
@@ -88,7 +88,7 @@
 						<configuration>
 							<toolchains>
 								<jdk>
-									<version>11</version>
+									<version>9</version>
 								</jdk>
 							</toolchains>
 						</configuration>
@@ -164,7 +164,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>11</release>
+					<release>9</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -191,6 +191,19 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<dependencies>
+				<!-- this is needed to avoid Unsupported major version in asm -->
+					<dependency>
+						<groupId>org.ow2.asm</groupId>
+						<artifactId>asm</artifactId>
+						<version>6.2.1</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
