--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.sejda</groupId>
 	<artifactId>sejda-commons</artifactId>
 	<packaging>jar</packaging>
 	<name>sejda-commons</name>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<description>A collection of utilities and common classes.</description>
 	<url>http://www.sejda.org</url>
@@ -39,7 +37,7 @@
 		<connection>scm:git:git@github.com:torakiki/sejda-commons.git</connection>
 		<developerConnection>scm:git:git@github.com:torakiki/sejda-commons.git</developerConnection>
 		<url>scm:git:git@github.com:torakiki/sejda-commons.git</url>
-		<tag>HEAD</tag>
+		<tag>v1.0.0</tag>
 	</scm>
 
 	<developers>
