--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sejda-commons</artifactId>
 	<packaging>jar</packaging>
 	<name>sejda-commons</name>
-	<version>1.1.3</version>
+	<version>1.1.4-SNAPSHOT</version>
 
 	<description>A collection of utilities and common classes.</description>
 	<url>http://www.sejda.org</url>
@@ -37,7 +37,7 @@
 		<connection>scm:git:git@github.com:torakiki/sejda-commons.git</connection>
 		<developerConnection>scm:git:git@github.com:torakiki/sejda-commons.git</developerConnection>
 		<url>scm:git:git@github.com:torakiki/sejda-commons.git</url>
-		<tag>v1.1.3</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<developers>
