--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>1.1.8-SNAPSHOT</version>
 
 	<description>A collection of utilities and common classes.</description>
-	<url>http://www.sejda.org</url>
+	<url>https://www.sejda.org</url>
 
 	<issueManagement>
 		<system>GitHub</system>
@@ -17,7 +17,7 @@
 
 	<organization>
 		<name>sejda</name>
-		<url>http://www.sejda.org</url>
+		<url>https://www.sejda.org</url>
 	</organization>
 
 	<licenses>
@@ -89,7 +89,7 @@
 						<configuration>
 							<toolchains>
 								<jdk>
-									<version>8</version>
+									<version>11</version>
 								</jdk>
 							</toolchains>
 						</configuration>
@@ -165,8 +165,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>11</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -205,24 +204,24 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.30</version>
+			<version>1.7.32</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
+			<version>1.2.9</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.2.3</version>
+			<version>1.2.9</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>4.1.0</version>
+			<version>4.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
