--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<developer>
 			<id>torakiki</id>
 			<name>Andrea Vacondio</name>
-			<email>andrea.vacondio@gmail.com</email>
+			<email>andrea@soberlemur.com</email>
 		</developer>
 		<developer>
 			<id>ediweissmann</id>
@@ -54,13 +54,13 @@
 	</developers>
 
 	<distributionManagement>
-		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
+		<!--		<snapshotRepository>-->
+		<!--			<id>central</id>-->
+		<!--			<url>https://central.sonatype.com/</url>-->
+		<!--		</snapshotRepository>-->
 		<repository>
-			<id>sonatype-nexus-staging</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<id>central</id>
+			<url>https://central.sonatype.com/</url>
 		</repository>
 	</distributionManagement>
 
@@ -143,14 +143,13 @@
 						</executions>
 					</plugin>
 					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.7.0</version>
+						<groupId>org.sonatype.central</groupId>
+						<artifactId>central-publishing-maven-plugin</artifactId>
+						<version>0.8.0</version>
 						<extensions>true</extensions>
 						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+							<publishingServerId>central</publishingServerId>
+							<autoPublish>true</autoPublish>
 						</configuration>
 					</plugin>
 				</plugins>
@@ -227,7 +226,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.13.2</version>
+			<version>5.13.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
